# wikipedia-word-counter

./: Cargo.toml  README.md
src/: histogram.rs  main.rs  wikitext.rs  word_counter.rs
