[package]
name = "histogram"
version = "0.1.0"
authors = ["Alec Larsen <alec@unabridgedsoftware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.6"
crossbeam-channel = "0.4.2"
parse_mediawiki_dump = "0.1.0"
parse_wiki_text = "0.1.5"
csv = "1.1.3"
